<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTituloCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_calculadora"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etNum1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_num1"
        android:inputType="numberDecimal|numberSigned"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvTituloCalc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etNum2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_num2"
        android:inputType="numberDecimal|numberSigned"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/etNum1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Spinner
        android:id="@+id/spinnerOperacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/etNum2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnOperar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_operar"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/spinnerOperacion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvResultadoCalc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnOperar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnHistorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_ver_historial"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvResultadoCalc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnRegresarMenu3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_regresar_menu"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/btnHistorial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

